--- a/src/locales/en/home_page.json
+++ b/src/locales/en/home_page.json
@@ -1,3 +1,19 @@
 {
-    
+    "hero_main_tag_line": "RUSTIC CHARM MEETS POLISHED BEAUTY",
+    "hero_company_name": "Country Hideaway Nails",
+
+    "hero_book_call_to_act": "Book Appointment",
+    "hero_prices_call_to_act": "See our Prices",
+
+    "about_title": "Nice To Meet You!",
+    "about_paragraph": "My name is Athena Riggle, the owner and operator of Country Hideaway Nails. Before my family and I moved to the area in the summer of 2009, I often visited the many nails salons available in OKC. After moving to the country, however, I found that the nearest salon was often more than half-an-hour away. Because of this, I began performing my own nail-care services and quickly picked it up as a fun hobby. To make a long story short, I eventually decided to attain my nail technician certification, and in 2022 I opened Country Hideaway Nails: a peaceful, yet convenient salon for fellow rural American residents. I hope you'll visit soon!",
+
+    "review_title": "What Customers Say About Us",
+
+    "community_title": "Stay Connected!",
+    "community_paragraph_link_prefix": "Follow us over on",
+    "community_paragraph_link": "Facebook",
+    "community_paragraph_link_suffix": "to receive up-to-date announcements, specials, and discounts! You can also peruse our published prior works in more detail and join our growing community of nail-art enthusiasts. We hope to see you there!",
+
+    "gallery_title": "See Our Work"
 }
