Gallery and Reviews Section

--- a/src/locales/en/home_page.json
+++ b/src/locales/en/home_page.json
@@ -10,6 +10,12 @@
 
     "review_title": "What Customers Say About Us",
 
+    "review_text_1": "The Country Hideaway is so cute, comfortable, and private. Athena is so professional, kind, and thorough. Whatever I ask for she does her absolute best to give me what I want. Love getting pampered!",
+
+    "review_text_2": "Very nice little salon. Cute and welcoming environment. Quiet, no noise from other areas like most salons. Friendly owner.",
+
+    "review_text_3": "Great selection of colors and nail designs. Wonderful atmosphere with cozy feel to it. Very affordable and even offers discounts periodically. Can't wait to go again.",
+
     "community_title": "Stay Connected!",
     "community_paragraph_link_prefix": "Follow us over on",
     "community_paragraph_link": "Facebook",
