--- a/src/locales/en/services_page.json
+++ b/src/locales/en/services_page.json
@@ -1,3 +1,6 @@
 {
-    
+    "services_title": "Available Products & Services",
+    "book_call_to_action": "Like What You See?",
+    "book_button_text": "Book Appointment",
+    "now_accepting_label": "Now Accepting"
 }
